--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Verwendete Python Bibliotheken:\n",
+        "## Verwendete Python Bibliotheken:\n",
         "- Vorraussetzung: Pip Paketmanager"
       ]
     },
@@ -49,7 +49,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Verwendete VSCode Extensions"
+        "## Verwendete VSCode Extensions"
       ]
     },
     {
@@ -69,12 +69,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "mZUExlrZ2zyA"
       },
       "source": [
-        "Stochastische Optimierung: ADAM\n",
+        "## Stochastische Optimierung: ADAM\n",
         "\n"
       ]
     },
@@ -334,6 +335,9 @@
         "Der SFO (Sum-of-Functions Optimierer) ist ein quasi-Newton-Verfahren, das auch Minibatches aufbaut. Im Gegensatz zum Adam Optimierer hat der SFO einen linearen Speicherbedarf in der Anzahl der Minibatch-Partitionen eines Datensatzen. Das wäre auf speicherbeschränkten Systemen, wie zum Beispiel einer GPU meist nicht möglich durchzuführen.\n",
         "\n",
         "Bei RMSProp (Root Mean Square Propagation) handelt es sich um einen Optimierer, der eng mit dem Adam Optimierer verwandt ist. Es kann auch vorkommen, dass eine Version mit Momentum eingesetzt wird (Graves, 2013). Wird nun RMSProp mit Momentum eingesetzt, so werden die Parameteraktualisierungen anhand eines Momentums auf dem neu skalierten Gradienten generiert. Der Adam Optimierer hingegen werden die Aktualisierungen anhand eines Durchschnitts des ersten und zweiten Momentums des Gradienten geschätzt. Ein weiterer Nachteil bei RMSProp ist das nicht vorhandensein eines Bias Korrekturbegriffs. Dieser wäre notwendig, wenn ein Wert von $\\beta _{2}$ nahe dem Wert eins (1) ist, da in diesem Fall eine Nichtkorrektur der Verzerrung zu sehr großen Schrittweiten führen kann, woraus sich in der Folge eine Divergenz entwickeln kann. [siehe 6.4]\n",
+        "RMSProp wurde zeitgleich mit dem Optimierer Adadelta entwickelt, allerdings unabhängig davon. RMSProp war zumindest 2016 noch nicht veröffentlich. Beide teilen sich allerdings den gleichen Update-Vektor:\n",
+        "$$E[g^2]_t = 0.9E[g^2]_{t-1}+0.1g^2_t$$\n",
+        "$$\\theta_{t+1}=\\theta_t-\\frac{\\eta}{\\sqrt{E[g^2]_t+\\varepsilon}}g_t$$\n",
         "\n",
         "Der AdaGrad Algorithmus passt die Lernrate an die Parameter an und führt kleiner Aktualisierungen für Parameter durch, die mit häufig auftretenden Features verbunden sind. Größere Aktualisierungen werden für Parameter durchgeführt, die mit seltenen Features verbunden sind. [https://ruder.io/optimizing-gradient-descent/index.html#adagrad];[http://papers.nips.cc/paper/4687-large-scale-distributed-deep-networks.pdf](Jeffrey Dean, Greg S. Corrado, Rajat Monga, Kai Chen, Matthieu Devin, Quoc V. Le, Mark Z. Mao, Marc’Aurelio Ranzato, Andrew Senior, Paul Tucker, Ke Yang, Andrew Y. Ng)\n"
       ]
