--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -323,18 +323,18 @@
         "# Alternativen & Abgrenzung\n",
         "\n",
         "Eine Abgrenzung des Adam Optimierers zu anderen Optimierungsmethoden sollte gezogen werden. Zu den Alternativen gehören folgende Methoden beziehungsweise Optimierern:\n",
-        "- RMSProp\n",
-        "- AdaGrad\n",
-        "- vSGD\n",
-        "- AdaDelta\n",
-        "- natürliche Newton-Methode\n",
-        "- SFO\n",
-        "- NGD\n",
+        "- RMSProp - [Tielemann & Hinton, 2012](https://www.cs.toronto.edu/~tijmen/csc321/slides/lecture_slides_lec6.pdf)\n",
+        "- AdaGrad - [Duchi et al., 2011](https://dl.acm.org/doi/pdf/10.5555/1953048.2021068)\n",
+        "- vSGD - [Schaul et al., 2012](https://arxiv.org/abs/1206.1106)\n",
+        "- AdaDelta - [Zeiler, 2012](https://arxiv.org/abs/1212.5701)\n",
+        "- natürliche Newton-Methode - [Roux & Fitzgibbon, 2010](https://icml.cc/Conferences/2010/papers/438.pdf)\n",
+        "- SFO - [Sohl-Dicksein et al., 2014](https://dl.acm.org/doi/proceedings/10.5555/3044805)\n",
+        "- NGD - [Amari, 1998](https://doi.org/10.1162/089976698300017746)\n",
         "\n",
         "vSGD, AdaDelta und die natürliche Newton-Methode schätzen die Krümmung aus Informationen erster Ordnung und setzen anhand dieser Informationen die Schrittweite.\n",
         "Der SFO (Sum-of-Functions Optimierer) ist ein quasi-Newton-Verfahren, das auch Minibatches aufbaut. Im Gegensatz zum Adam Optimierer hat der SFO einen linearen Speicherbedarf in der Anzahl der Minibatch-Partitionen eines Datensatzen. Das wäre auf speicherbeschränkten Systemen, wie zum Beispiel einer GPU meist nicht möglich durchzuführen.\n",
         "\n",
-        "Bei RMSProp (Root Mean Square Propagation) handelt es sich um einen Optimierer, der eng mit dem Adam Optimierer verwandt ist. Es kann auch vorkommen, dass eine Version mit Momentum eingesetzt wird (Graves, 2013). Wird nun RMSProp mit Momentum eingesetzt, so werden die Parameteraktualisierungen anhand eines Momentums auf dem neu skalierten Gradienten generiert. Der Adam Optimierer hingegen werden die Aktualisierungen anhand eines Durchschnitts des ersten und zweiten Momentums des Gradienten geschätzt. Ein weiterer Nachteil bei RMSProp ist das nicht vorhandensein eines Bias Korrekturbegriffs. Dieser wäre notwendig, wenn ein Wert von $\\beta _{2}$ nahe dem Wert eins (1) ist, da in diesem Fall eine Nichtkorrektur der Verzerrung zu sehr großen Schrittweiten führen kann, woraus sich in der Folge eine Divergenz entwickeln kann. [siehe 6.4]\n",
+        "Bei RMSProp (Root Mean Square Propagation) handelt es sich um einen Optimierer, der eng mit dem Adam Optimierer verwandt ist. Es kann auch vorkommen, dass eine Version mit Momentum eingesetzt wird [Graves, 2013](https://arxiv.org/abs/1308.0850). Wird nun RMSProp mit Momentum eingesetzt, so werden die Parameteraktualisierungen anhand eines Momentums auf dem neu skalierten Gradienten generiert. Der Adam Optimierer hingegen werden die Aktualisierungen anhand eines Durchschnitts des ersten und zweiten Momentums des Gradienten geschätzt. Ein weiterer Nachteil bei RMSProp ist das nicht vorhandensein eines Bias Korrekturbegriffs. Dieser wäre notwendig, wenn ein Wert von $\\beta _{2}$ nahe dem Wert eins (1) ist, da in diesem Fall eine Nichtkorrektur der Verzerrung zu sehr großen Schrittweiten führen kann, woraus sich in der Folge eine Divergenz entwickeln kann. [siehe 6.4]\n",
         "RMSProp wurde zeitgleich mit dem Optimierer Adadelta entwickelt, allerdings unabhängig davon. RMSProp war zumindest 2016 noch nicht veröffentlich. Beide teilen sich allerdings den gleichen Update-Vektor:\n",
         "$$E[g^2]_t = 0.9E[g^2]_{t-1}+0.1g^2_t$$\n",
         "$$\\theta_{t+1}=\\theta_t-\\frac{\\eta}{\\sqrt{E[g^2]_t+\\varepsilon}}g_t$$\n",
