--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -300,7 +300,7 @@
         "\n",
         "Dieser Optimierer ist weit verbreitet und wird beim Training von neuronalen Netzen eingesetzt. [Introduction to Optimizers, Adam](https://www.datarobot.com/blog/introduction-to-optimizers)\n",
         "\n",
-        "Mit diesem Optimizer beziehungsweise dieser Methode können individuelle adaptive Lernraten für unterschiedliche Parameter aus Schätzungen der ersten und zweiten Momente der Gradienten berechnet werden. Abgeleitet ist der Name Adam von 'adaptive moment estimation'. Diese Methode soll die Vorteile der beiden Methodiken AdaGrad (Duchi et al., 2011) sowie RMSProp (Tielemann & Hinton, 2012) kombinieren.\n",
+        "Mit diesem Optimizer beziehungsweise dieser Methode können individuelle adaptive Lernraten für unterschiedliche Parameter aus Schätzungen der ersten und zweiten Momente der Gradienten berechnet werden. Abgeleitet ist der Name Adam von 'adaptive moment estimation'. Diese Methode soll die Vorteile der beiden Methodiken AdaGrad [Duchi et al., 2011](https://dl.acm.org/doi/pdf/10.5555/1953048.2021068) sowie RMSProp [Tielemann & Hinton, 2012](https://www.cs.toronto.edu/~tijmen/csc321/slides/lecture_slides_lec6.pdf) kombinieren.\n",
         "\n",
         "So gehören zu den Vorteilen von ADAM, dass \n",
         "- die Größenordnungen der Parameteraktualisierungen invariant gegenüber der Skalierung der Gradienten sind,\n",
