--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -148,13 +148,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "## Definition der Verlustfunktion\n",
         "Die Verlustfunktion ordnet in einem Entscheidungsraum ${\\displaystyle (\\Omega ,\\Sigma )}$ Bereichsschätzungen und Punktschätzungen den Schaden zu, der durch eine vom wahren Parameter abweichende Entscheidung verursacht wird. Die Verlustfunktion wird innerhalb eines statistischen Models ${\\displaystyle (X,{\\mathcal {A}},(P_{\\vartheta })_{\\vartheta \\in \\Theta })}$ verwendet und ist wie folgt aufgebaut: ${\\displaystyle L:\\Theta \\times \\Omega \\to [0,+\\infty ]}$. Dabei gilt, das die Funktion ${\\displaystyle L(\\vartheta ,\\cdot )} {\\displaystyle \\Sigma -{\\mathcal {B}}([0,+\\infty ])}$ für jedes fixierte ${\\displaystyle \\vartheta \\in \\Theta }$ messbar ist. (Q: https://de.wikipedia.org/wiki/Verlustfunktion_(Statistik))\n",
         "\n",
-        "Verlustfunktionen können auf einzelne Anwendungsfälle angepasst werden. Die folgene Beispielverlustfunktion berechnet die Differenz zwischen vorhergesagten Werten und den tatsächlichen Werten $(Vorhersage - Realwert = |Differenz|)$. Je höher die Differenz, desto höher ist der verursachte Schaden einer Bereichs- oder Punktschätzung. Wenn zum Beispiel der geschätzte Wert für die monatlichen Wohnungskosten in Stuttgart 1500 beträgt, jedoch in der Realität die Kosten bei 1000 liegen, dann gibt die Verlustfunktionen eine Differenz von 500 aus. Wenn die Vorhersage unter dem Realwert liegt, generiert die Verlustfunktion ebenfalls eine Differenz.\n",
+        "Verlustfunktionen können auf einzelne Anwendungsfälle angepasst werden. Die folgene Beispielverlustfunktion berechnet die Differenz zwischen vorhergesagten Werten und den tatsächlichen Werten $(Vorhersage - Realwert = Differenz)$. Je höher die Differenz, desto höher ist der verursachte Schaden einer Bereichs- oder Punktschätzung. Wenn zum Beispiel der geschätzte Wert für die monatlichen Wohnungskosten in Stuttgart 1500 beträgt, jedoch in der Realität die Kosten bei 1000 liegen, dann gibt die Verlustfunktionen eine Differenz von 500 aus. Wenn die Vorhersage unter dem Realwert liegt, generiert die Verlustfunktion ebenfalls eine Differenz.\n",
         "\n",
         "| Vorhersage | Realwerte | Differenz |\n",
         "|------------|-----------|-----------|\n",
