--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -180,6 +180,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -191,7 +192,7 @@
         "1. Berechne für jedes Gewicht welchen Einfluss kleine Änderungen auf die Verlustfunktion haben. Dieser Einfluss auf die Verlustfunktion wird Gradient genannt. Ein Gradient ist ein Spaltenvektor, der die partiellen Ableitungen von f nach den Spaltenvektoren (also den Gewichten) enthält (Q:https://studyflix.de/mathematik/gradient-berechnen-1350).\n",
         "2. Modifiziere die Gewichte anhand der Gradienten, sodass die Verlustfunktion kleiner wird.\n",
         "\n",
-        "Die Schritte eins und zwei werden so lange wiederholt, bis die Verlustfunktionen einen festgelegten minmalen Wert erreicht hat. Die Geschwindigkeit mit dem der Gradientenabstieg operiert, kann über die Lernrate angepasst werden. Die Lernrate bestimmt die Größe der Änderungen, die der Gradientenabstieg an den Gewichten vornimmt. Diese wird in Kommazahlen angegeben und hat meistens Werte von 0.0001 bis 0.001. Die Gradienten werden mit der Lernrate multipliziert. \n",
+        "Die Schritte eins und zwei werden so lange wiederholt, bis die Verlustfunktionen einen festgelegten minmalen Wert erreicht hat. Die Geschwindigkeit mit dem der Gradientenabstieg operiert, kann über die Lernrate (alternativ auch Schrittgröße genannt) angepasst werden. Die Lernrate bestimmt die Größe der Änderungen, die der Gradientenabstieg an den Gewichten vornimmt. Diese wird in Kommazahlen angegeben und hat meistens Werte von 0.0001 bis 0.001. Die Gradienten werden mit der Lernrate multipliziert. \n",
         "Eine zu kleine Lernrate kann dazu führen, das der Gradientenabstieg Optimierer Probleme mit lokalen Minima hat. In diesem Fall geht der Optimierer davon aus, dass er den minimalsten Punkt erreicht hat, jedoch handelt es sich bei dem Punkt nur um ein lokales Minimum.\n",
         "\n",
         "Ein weiteres Problem für Optimierer kann Overfitting darstellen. Beim Overfitting wird das Model zu sehr auf die Daten mit denen es trainiert wurde angepasst. Dadurch kann das Modell mit den Trainingsdaten nahezu perfekt arbeiten, hat jedoch Probleme mit realen Daten. Overfitting tritt auf, wenn einzelne Gewichte einen zu hohen Einfluss auf das Model haben und dadurch das Ergebnis zu stark modifizieren. Optimierer können Overfitting durch das Hinzufügen von einem zusätzlichen Strafparameter zur Verlustfunktion vermeiden. Der Strafparameter bestraft Optimierer, wenn sie zu große Werte für Gewichte nehmen, auch wenn dadurch die Verlustfunktion kleiner wird. Dadurch verändern Optimierer mehrere Gewichte in kleinen Schritten, anstatt einzelne Gewichte in großen Schritten.\n",
@@ -206,7 +207,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Beispiele"
+        "# Beispiele (Lucas)"
       ]
     },
     {
@@ -222,7 +223,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Einsatzbereich"
+        "# Einsatzbereich (Lucas)"
       ]
     },
     {
@@ -314,6 +315,21 @@
         "\n",
         "In disem Ausschnitt sind wichtige Teile des Algorithmus als Pseudocode abgebildet. Dieser wird in der Folge näher beschrieben.\n",
         "\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$\\beta$ = Gewichtung neuer Werte gegenüber älteren Werten (siehe Exponentially Weighted Moving Average, https://youtu.be/Vce8w1sy0e8?t=503) <br>\n",
+        "$\\alpha$ = Schrittweite\n",
+        "$f$ = Funktion mit dem Parameter $\\theta$<br>\n",
+        "$m_0$ = Mittelwert des Gradienten <br>\n",
+        "$v_0$ = Unzentrierte Varianz des Gradienten<br>\n",
+        "$\\nabla$ = Gradient <br>\n",
+        "$t$ = Zeit <br>\n",
+        "$t = t + 1$ = Erhöhe den Wert der Zeit um 1 (ähnlich i++ in Schleifen) <br>"
       ]
     },
     {
