--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -359,12 +359,10 @@
         "Mit jedem Datenpunkt wird das (Durchschnitts-)Gewicht neu berechnet. Dabei muss bei jeder Neuberechnung von V abhängig von der Zeit (siehe 1. Formel) immer das Gewicht des vorherigen Datenpunktes bzw. Schrittes mit berücksichtigt werden. $\\beta$ wird dabei zwischen Null und Eins gewählt ($0<\\beta<1$)\n",
         "1. $ V_{t}=\\beta*V_{t-1}+(1-\\beta)*\\theta_t $\n",
         "\n",
+        "Diese Formel kann für die <span style=\"color:#18739e\">horizontale Bewegung</span>, wie auch für die <span style=\"color:#18739e\">vertikale Bewegung</span> eingesetzt werden, sollte aber anhand der Variablenbezeichnungen leicht angepasst werden. Die Formeln 3. und 4. stellen die eigentliche Bewegung dar, die abhängig von der jeweiligen Gewichtung aus 1. oder 2. ist.\n",
+        "\n",
         "Visualisiert kann dies folgendermaßen dargestellt werden (dabei zeigt die rote Linie das Durchschnittsgewicht an jeder Stelle der Punkte an):\n",
         "![image.png](attachment:image-2.png)\n",
-        "\n",
-        "2. $ V_{dB}=\\beta*V_{dB_{prev}}+(1-\\beta)*dB $\n",
-        "3. $ W=W - \\alpha*V_{dW} $\n",
-        "4. $ B=B - \\alpha*V_{dB} $\n",
         "\n",
         "RMSprop (siehe (CodingLane)[https://www.youtube.com/watch?v=ajI_HTyaCu8&ab_channel=CodingLane]):\n",
         "1. $ S_{dW}=\\beta*S_{dW_{prev}}+(1-\\beta)*(dW)^2 $\n",
