--- a/ML_ADAM_11-12-2022.ipynb
+++ b/ML_ADAM_11-12-2022.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Limitierungen\n",
+    "(Q: https://pub.towardsai.net/why-adam-optimizer-should-not-be-the-default-learning-algorithm-a2b8d019eaa0)\n"
+   ]
   }
  ],
  "metadata": {
