--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -1231,7 +1231,7 @@
         "Visualisiert kann dies folgendermaßen dargestellt werden (dabei zeigt die rote Linie das Durchschnittsgewicht an jeder Stelle der Punkte an):\n",
         "![image.png](attachment:image-2.png)\n",
         "\n",
-        "RMSprop (siehe (CodingLane)[https://www.youtube.com/watch?v=ajI_HTyaCu8&ab_channel=CodingLane]):\n",
+        "RMSprop (siehe [CodingLane](https://www.youtube.com/watch?v=ajI_HTyaCu8&ab_channel=CodingLane)):\n",
         "1. $$ S_{dW}=\\beta*S_{dW_{prev}}+(1-\\beta)*(dW)^2 $$\n",
         "2. $$ S_{dB}=\\beta*S_{dB_{prev}}+(1-\\beta)*(dB)^2 $$\n",
         "3. $$ W=W-\\alpha*(\\frac{dW}{\\sqrt{S_{dW}+\\epsilon}}) $$\n",
@@ -1273,7 +1273,7 @@
         "$$E[g^2]_t = 0.9E[g^2]_{t-1}+0.1g^2_t$$\n",
         "$$\\theta_{t+1}=\\theta_t-\\frac{\\eta}{\\sqrt{E[g^2]_t+\\varepsilon}}g_t$$\n",
         "\n",
-        "Der AdaGrad Algorithmus passt die Lernrate an die Parameter an und führt kleiner Aktualisierungen für Parameter durch, die mit häufig auftretenden Features verbunden sind. Größere Aktualisierungen werden für Parameter durchgeführt, die mit seltenen Features verbunden sind. [https://ruder.io/optimizing-gradient-descent/index.html#adagrad];[http://papers.nips.cc/paper/4687-large-scale-distributed-deep-networks.pdf](Jeffrey Dean, Greg S. Corrado, Rajat Monga, Kai Chen, Matthieu Devin, Quoc V. Le, Mark Z. Mao, Marc’Aurelio Ranzato, Andrew Senior, Paul Tucker, Ke Yang, Andrew Y. Ng)\n"
+        "Der AdaGrad Algorithmus passt die Lernrate an die Parameter an und führt kleiner Aktualisierungen für Parameter durch, die mit häufig auftretenden Features verbunden sind. Größere Aktualisierungen werden für Parameter durchgeführt, die mit seltenen Features verbunden sind. [https://ruder.io/optimizing-gradient-descent/index.html#adagrad];([Jeffrey Dean, Greg S. Corrado, Rajat Monga, Kai Chen, Matthieu Devin, Quoc V. Le, Mark Z. Mao, Marc’Aurelio Ranzato, Andrew Senior, Paul Tucker, Ke Yang, Andrew Y. Ng](http://papers.nips.cc/paper/4687-large-scale-distributed-deep-networks.pdf))\n"
       ]
     }
   ],
