--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -1283,7 +1283,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.13 64-bit (microsoft store)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1297,11 +1297,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+      "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "f5c0429a0d9fd873a8397b96bedc68a9c430b36d28cd38b0c4831aae494627fb"
+        "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
       }
     }
   },
