--- a/lucas.ipynb
+++ b/lucas.ipynb
@@ -5,22 +5,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Beispiel\n",
     "Im Folgenden wird eine Beispielimplementierung in Python beschrieben. Das Beispiel verwendet nur die Biblliotheken numpy und math (Q: https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc).\n",
-    "Erklärung der Variablen:\n",
+    "\n",
+    "\n",
+    "Um den Adam Algorithmus zu initialisieren müssen einige Konstanten definiert werden:\n",
     "*   alpha = Schrittgröße\n",
     "*   beta1 und beta2 = Gewichtung neuerer Werte gegenüber älteren Werten. beta1 fasst den Mittelwert und beta2 die unzentrierte Varianz zusammen.\n",
     "*   epsilon = Konstante, damit beim Updaten von $\\theta$ nicht durch null geteilt wird.\n",
     "\n",
+    "In jeder Iteration des Algorithmus werden folgende Schritte durchgeführt:\n",
+    "Im Ersten Schritt werden die Gewichte und der Bias von $\\beta_1$ und $\\beta_2$ berechnet. Dazu werden $m_t$ (der Mittelwert) und $v_t$ (die Varianz) über die Formeln $m_t = \\beta_t * m_{t-1} + (1- \\beta_1) * g_t$ und $v_t = \\beta_t * v_{t-1} + (1- \\beta_2) * g^2_t$ berechnet.\n",
     "\n",
-    "\n",
-    "Die gleitenden Mittelwerte werden einmal pro Iteration über die Parameter $\\beta_1$ und $\\beta_2$ und den Gradienten $g_t$ berechnet. Dieser Schritt wird Bias Correction genannt. \n",
-    "$$\\hat{m}_t = \\frac{m_t}{1-\\beta^t_1} $$\n",
-    "$$\\hat{v}_t = \\frac{v_t}{1-\\beta^t_2} $$\n",
-    "\n",
-    "https://miro.medium.com/max/390/0*F9hIO3J8_i2F0p3y.webp\n",
-    "Die Gewichte und der Bias werden mit Hilfe der Schrittgröße $\\alpha$ aktuallisiert.\n",
-    "\n",
-    "![image.png](attachment:image.png)"
+    "Die gleitenden Mittelwerte werden über die Parameter $\\beta_1$ und $\\beta_2$ und den Gradienten $g_t$ berechnet. Dieser Schritt wird Bias Correction genannt und wird über folgende Formeln $\\hat{m}_t = \\frac{m_t}{1-\\beta^t_1}$ und $\\hat{v}_t = \\frac{v_t}{1-\\beta^t_2}$ durchgeführt.\n",
+    "Die Gewichte und der Bias werden mit Hilfe der Schrittgröße $\\alpha$ aktuallisiert."
    ]
   },
   {
@@ -29,8 +27,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# dw = Weights of the previous timestep\n",
+    "# db = biases of the previous timestep\n",
+    "# m = mean\n",
+    "# v = uncentered variance\n",
+    "# m_dw = mean of the Weights of the previous timestep\n",
+    "# m_db = mean of the biases of the previous timestep\n",
+    "# v_dw = uncentered variance of the Weights of the previous timestep\n",
+    "# v_db = uncentered variance of the biases of the previous timestep\n",
     "import numpy as np\n",
     "class AdamOptim():\n",
+    "    # inititalze the adam parameters\n",
     "    def __init__(self, alpha=0.01, beta1=0.9, beta2=0.999, epsilon=1e-8):\n",
     "        self.m_dw, self.v_dw = 0, 0\n",
     "        self.m_db, self.v_db = 0, 0\n",
@@ -48,6 +55,7 @@
     "\n",
     "        ## rms beta 2\n",
     "        # weights\n",
+    "        # update biased second raw moment estimate\n",
     "        self.v_dw = self.beta2*self.v_dw + (1-self.beta2)*(dw**2)\n",
     "        # biases\n",
     "        self.v_db = self.beta2*self.v_db + (1-self.beta2)*(db)\n",
@@ -59,8 +67,8 @@
     "        v_db_corr = self.v_db/(1-self.beta2**t)\n",
     "\n",
     "        ## update weights and biases\n",
-    "        w = w - self.alpha*(m_dw_corr/(np.sqrt(v_dw_corr)+self.epsilon))\n",
-    "        b = b - self.alpha*(m_db_corr/(np.sqrt(v_db_corr)+self.epsilon))\n",
+    "        w = w - self.alpha*(m_dw_corr/(np.sqrt(abs(v_dw_corr))+self.epsilon))\n",
+    "        b = b - self.alpha*(m_db_corr/(np.sqrt(abs(v_db_corr))+self.epsilon))\n",
     "        return w, b"
    ]
   },
@@ -820,14 +828,6 @@
       "iteration 745: weight=0.9999999999999929\n",
       "converged after 746 iterations\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\AppData\\Local\\Temp\\ipykernel_7012\\2539486631.py:32: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  b = b - self.alpha*(m_db_corr/(np.sqrt(v_db_corr)+self.epsilon))\n"
-     ]
     }
    ],
    "source": [
@@ -836,10 +836,11 @@
     "## take derivative\n",
     "def grad_function(m):\n",
     "    return 2*m-2\n",
+    "# check if the current weight is the same as the previous weight\n",
     "def check_convergence(w0, w1):\n",
     "    return (w0 == w1)\n",
     "  \n",
-    "\n",
+    "# inititialize Adam object\n",
     "w_0 = 0\n",
     "b_0 = 0\n",
     "adam = AdamOptim()\n",
