--- a/lucas.ipynb
+++ b/lucas.ipynb
@@ -5,6 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Einsatzbereich\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Beispiel\n",
     "Im Folgenden wird eine Beispielimplementierung in Python beschrieben. Das Beispiel verwendet nur die Biblliotheken numpy und math (Q: https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc).\n",
     "\n",
@@ -14,7 +22,7 @@
     "*   beta1 und beta2 = Gewichtung neuerer Werte gegenüber älteren Werten. beta1 fasst den Mittelwert und beta2 die unzentrierte Varianz zusammen.\n",
     "*   epsilon = Konstante, damit beim Updaten von $\\theta$ nicht durch null geteilt wird.\n",
     "\n",
-    "In jeder Iteration des Algorithmus werden folgende Schritte durchgeführt:\n",
+    "In jeder Iteration des Algorithmus werden folgende Schritte durchgeführt: $\\newline$\n",
     "Im Ersten Schritt werden die Gewichte und der Bias von $\\beta_1$ und $\\beta_2$ berechnet. Dazu werden $m_t$ (der Mittelwert) und $v_t$ (die Varianz) über die Formeln $m_t = \\beta_t * m_{t-1} + (1- \\beta_1) * g_t$ und $v_t = \\beta_t * v_{t-1} + (1- \\beta_2) * g^2_t$ berechnet.\n",
     "\n",
     "Die gleitenden Mittelwerte werden über die Parameter $\\beta_1$ und $\\beta_2$ und den Gradienten $g_t$ berechnet. Dieser Schritt wird Bias Correction genannt und wird über folgende Formeln $\\hat{m}_t = \\frac{m_t}{1-\\beta^t_1}$ und $\\hat{v}_t = \\frac{v_t}{1-\\beta^t_2}$ durchgeführt.\n",
