--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -154,9 +154,9 @@
       "metadata": {},
       "source": [
         "## Definition der Verlustfunktion\n",
-        "Die Verlustfunktion ordnet in einem Entscheidungsraum ${\\displaystyle (\\Omega ,\\Sigma )}$ Bereichsschätzungen und Punktschätzungen den Schaden zu, der durch eine vom wahren Parameter abweichende Entscheidung verursacht wird. Die Verlustfunktion wird innerhalb eines statistischen Models ${\\displaystyle (X,{\\mathcal {A}},(P_{\\vartheta })_{\\vartheta \\in \\Theta })}$ verwendet und ist wie folgt aufgebaut: ${\\displaystyle L:\\Theta \\times \\Omega \\to [0,+\\infty ]}$. Dabei gilt, das die Funktion ${\\displaystyle L(\\vartheta ,\\cdot )} {\\displaystyle \\Sigma -{\\mathcal {B}}([0,+\\infty ])}$ für jedes fixierte ${\\displaystyle \\vartheta \\in \\Theta }$ messbar ist. (Q: https://de.wikipedia.org/wiki/Verlustfunktion_(Statistik))\n",
+        "Die Verlustfunktion ordnet in einem Entscheidungsraum ${\\displaystyle (\\Omega ,\\Sigma )}$ Bereichsschätzungen und Punktschätzungen den Schaden zu, der durch eine vom wahren Parameter abweichende Entscheidung verursacht wird. Die Verlustfunktion wird innerhalb eines statistischen Models ${\\displaystyle (X,{\\mathcal {A}},(P_{\\vartheta })_{\\vartheta \\in \\Theta })}$ verwendet und ist wie folgt aufgebaut: ${\\displaystyle L:\\Theta \\times \\Omega \\to [0,+\\infty ]}$. Dabei gilt, das die Funktion ${\\displaystyle L(\\vartheta ,\\cdot )} {\\displaystyle \\Sigma -{\\mathcal {B}}([0,+\\infty ])}$ für jedes fixierte ${\\displaystyle \\vartheta \\in \\Theta }$ messbar ist. Mehr Informationen zur Verlustfunktionen können [Rüschendorf, 2014](https://link.springer.com/book/10.1007/978-3-642-41997-3) entnommen werden.\n",
         "\n",
-        "Verlustfunktionen können auf einzelne Anwendungsfälle angepasst werden. Die folgene Beispielverlustfunktion berechnet die Differenz zwischen vorhergesagten Werten und den tatsächlichen Werten $(Vorhersage - Realwert = Differenz)$. Je höher die Differenz, desto höher ist der verursachte Schaden einer Bereichs- oder Punktschätzung. Wenn zum Beispiel der geschätzte Wert für die monatlichen Wohnungskosten in Stuttgart 1500 beträgt, jedoch in der Realität die Kosten bei 1000 liegen, dann gibt die Verlustfunktionen eine Differenz von 500 aus. Wenn die Vorhersage unter dem Realwert liegt, generiert die Verlustfunktion ebenfalls eine Differenz.\n",
+        "Verlustfunktionen können auf einzelne Anwendungsfälle angepasst werden. Die folgene Beispielverlustfunktion berechnet die Differenz zwischen vorhergesagten Werten und den tatsächlichen Werten $(Vorhersage - Realwert = Differenz)$. Je höher die Differenz, desto höher ist der verursachte Schaden einer Bereichs- oder Punktschätzung. Wenn zum Beispiel der geschätzte Wert für die monatlichen Wohnungskosten in Stuttgart 1500 beträgt, jedoch in der Realität die Kosten bei 1000 liegen, dann gibt die Verlustfunktionen eine Differenz von 500 aus. Wenn die Vorhersage unter dem Realwert liegt, generiert die Verlustfunktion ebenfalls eine Differenz [Datarobot, 2018](https://www.datarobot.com/blog/introduction-to-loss-functions/).\n",
         "\n",
         "<div style=\"margin-left: auto;\n",
         "            margin-right: auto;\n",
@@ -170,20 +170,17 @@
         "\n",
         "</div>\n",
         "\n",
-        "Die Verlustfunktion könnte dahingehend angepasst werden, dass positive Abweichungen $(Vorhersage > Realwert)$ einen höheren Schaden verursachen, als negative Abweichungen $(Vorhersage < Realwert)$. Um den Gesamtverlust innerhalb eines Datensatzes zu berechnen, kann die quadratische Abweichung $((Vorhersage - Realwert)^2 = Quadratfehler)$ zwischen allen Vorhersagen und Realwerten berechnet werden. Alle Quadratfehler werden summiert und deren Mittlere quadratische Abweichung $(MQA)$ wird berechnet. \n",
+        "Die Verlustfunktion könnte dahingehend angepasst werden, dass positive Abweichungen $(Vorhersage > Realwert)$ einen höheren Schaden verursachen, als negative Abweichungen $(Vorhersage < Realwert)$. Um den Gesamtverlust innerhalb eines Datensatzes zu berechnen, kann die quadratische Abweichung $((Vorhersage - Realwert)^2 = Quadratfehler)$ zwischen allen Vorhersagen und Realwerten berechnet werden. Alle Quadratfehler werden summiert und deren Mittlere quadratische Abweichung $(MQA)$ wird berechnet [Datarobot, 2018](https://www.datarobot.com/blog/introduction-to-loss-functions/). \n",
         "$$\\operatorname{MQA}=\\frac{1}{n} \\sum_{i=1}^n (Vorhersage_i-Realwert_i)^2$$\n",
         "\n",
         "\n",
         "Eine andere Möglichkeit den Verlust der Verlustfunktion zu berechnen ist die Likelihood Funktion. Die Likelihood Funktion erhält als Eingabe die vorhergesagte Wahrscheinlichkeit $(p)$ des Eintretens eines Events und multipliziert die Eingabewerte miteinander. Wenn zum Beispiel folgende Vorhersagen $([0.2, 0.35, 0.1, 0.87])$ in Kombination mit folgenden Wahrheitswerten $([1, 0, 0, 1])$ getroffen wurden, berechnet sich der Wert der Likelihood Funktion wie folgt:\n",
         "$$0.2 * (1-0.35) * (1-0.1) * 0.87 = 0.102$$\n",
-        "Für alle falschen Werte wird die Wahrscheinlichkeit über $1-p$ berechnet.\n",
-        "(Q: https://www.datarobot.com/blog/introduction-to-loss-functions/)\n",
-        "\n",
+        "Für alle falschen Werte wird die Wahrscheinlichkeit über $1-p$ berechnet [Datarobot, 2018](https://www.datarobot.com/blog/introduction-to-loss-functions/).\n",
         "\n",
         "\n",
         "## Definition Modell\n",
-        "Ein Machine Learning Modell ist definiert als Datei, die bestimmte Muster erkennt (Q: https://learn.microsoft.com/de-de/windows/ai/windows-ml/what-is-a-machine-learning-model). Die Musterkennung des Modells wird durch Training mit Daten verbessert. Durch das Training entsteht ein Vorhersagemodell, welches mit einer hohen Wahrscheinlichkeit Vorhersagen anhand von Eingabedaten treffen kann (Q: Murdoch. Interpretable machine learning: definitions,\n",
-        "methods, and applications, S. 2).\n"
+        "Ein Machine Learning Modell ist definiert als Datei, die bestimmte Muster erkennt [QuinnRadich et al., 2022](https://learn.microsoft.com/de-de/windows/ai/windows-ml/what-is-a-machine-learning-model). Die Musterkennung des Modells wird durch Training mit Daten verbessert. Durch das Training entsteht ein Vorhersagemodell, welches mit einer hohen Wahrscheinlichkeit Vorhersagen anhand von Eingabedaten treffen kann [Murdoch et al, 2019, S. 2](https://arxiv.org/pdf/1901.04592.pdf?fbclid=IwAR2frcHrhLc4iaH5-TmKKq263NVvAKHtG4uQoiVNDeLAG3QFzdje-yzZjiQ).\n"
       ]
     },
     {
@@ -222,7 +219,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Im Folgenden wird eine Beispielimplementierung in Python beschrieben. Das Beispiel verwendet nur die Biblliotheken numpy und math (Q: https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc).\n",
+        "Im Folgenden wird eine Beispielimplementierung in Python beschrieben. Die Implementierung basiert auf einem Beispiel von [Enoch Kan](https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc) Das Beispiel verwendet nur die Biblliotheken numpy und math.\n",
         "\n",
         "Um den Adam Algorithmus zu initialisieren müssen einige Konstanten definiert werden:\n",
         "\n",
@@ -1271,19 +1268,19 @@
         "<tbody>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Title:</td>\n",
-        "    <td class=\"tg-zv4m\">Verlustfunktion (Statistik)</td>\n",
+        "    <td class=\"tg-zv4m\">Mathematische Statistik</td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Authors:</td>\n",
-        "    <td class=\"tg-zv4m\">NikelsenH, JonskiC, Biggerj1, HilberTraum, HRoestTypo</td>\n",
+        "    <td class=\"tg-zv4m\">Ludger Rüschendorf</td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Date:</td>\n",
-        "    <td class=\"tg-zv4m\">14. Mai 2022</td>\n",
+        "    <td class=\"tg-zv4m\">2014</td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Source:</td>\n",
-        "    <td class=\"tg-swfa\"><a href=\"https://de.wikipedia.org/wiki/Verlustfunktion_(Statistik)\" target=\"_blank\" rel=\"noopener noreferrer\">https://de.wikipedia.org/wiki/Verlustfunktion_(Statistik)</a></td>\n",
+        "    <td class=\"tg-swfa\"><a href=\"https://link.springer.com/book/10.1007/978-3-642-41997-3\" target=\"_blank\" rel=\"noopener noreferrer\">https://link.springer.com/book/10.1007/978-3-642-41997-3</a></td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
@@ -1364,6 +1361,46 @@
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Source:</td>\n",
         "    <td class=\"tg-swfa\"><a href=\"https://learn.microsoft.com/de-de/windows/ai/windows-ml/what-is-a-machine-learning-model\" target=\"_blank\" rel=\"noopener noreferrer\">https://learn.microsoft.com/de-de/windows/ai/windows-ml/what-is-a-machine-learning-model</a></td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
+        "    <td class=\"tg-zv4m\">13. Dezember 2022</td>\n",
+        "  </tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* <style type=\"text/css\">\n",
+        ".tg  {border-collapse:collapse;border-spacing:0;}\n",
+        ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  font-weight:normal;overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg .tg-zv4m{border-color:#ffffff;text-align:left;vertical-align:top}\n",
+        ".tg .tg-swfa{border-color:#ffffff;color:#0055ff;text-align:left;vertical-align:top}\n",
+        "</style>\n",
+        "<table class=\"tg\">\n",
+        "<tbody>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Title:</td>\n",
+        "    <td class=\"tg-zv4m\">Interpretable machine learning: definitions, methods, and applications</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Authors:</td>\n",
+        "    <td class=\"tg-zv4m\">James W. Murdoch, Chandan Singh, Karl Kumbier, Reza Abbasi-Asl, Bin Yu</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Date:</td>\n",
+        "    <td class=\"tg-zv4m\">14. Januar 2019</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Source:</td>\n",
+        "    <td class=\"tg-swfa\"><a href=\"https://arxiv.org/pdf/1901.04592.pdf?fbclid=IwAR2frcHrhLc4iaH5-TmKKq263NVvAKHtG4uQoiVNDeLAG3QFzdje-yzZjiQ\" target=\"_blank\" rel=\"noopener noreferrer\">https://arxiv.org/pdf/1901.04592.pdf?fbclid=IwAR2frcHrhLc4iaH5-TmKKq263NVvAKHtG4uQoiVNDeLAG3QFzdje-yzZjiQ</a></td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
