Updated ML_Adam and lucas
Added explanation of what unzentrierte Varianz means.
Added first few sentences of Einsatzbereich

--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -222,7 +222,7 @@
         "Um den Adam Algorithmus zu initialisieren müssen einige Konstanten definiert werden:\n",
         "\n",
         "- alpha = Schrittgröße\n",
-        "- beta1 und beta2 = Gewichtung neuerer Werte gegenüber älteren Werten. beta1 fasst den Mittelwert und beta2 die unzentrierte Varianz zusammen.\n",
+        "- beta1 und beta2 = Gewichtung neuerer Werte gegenüber älteren Werten. beta1 fasst den Mittelwert und beta2 die unzentrierte Varianz zusammen. Bei der unzentrierten Varianz handelt es sich um den reinen Varianzwert ohne Abzug des Mittelwerts.\n",
         "- epsilon = Konstante, damit beim Updaten von  nicht durch null geteilt wird.\n",
         "\n",
         "In jeder Iteration des Algorithmus werden folgende Schritte durchgeführt: Im Ersten Schritt werden die Gewichte und der Bias von $\\beta_1$ und $\\beta_2$ berechnet. Dazu werden $m_t$ (der Mittelwert) und $v_t$ (die Varianz) über die Formeln  \n",
