--- a/lucas.ipynb
+++ b/lucas.ipynb
@@ -5,7 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Einsatzbereich\n"
+    "# Einsatzbereich\n",
+    "Fürs Training komplexer neuronaler Netze\n",
+    "https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c\n",
+    "\n",
+    "https://pub.towardsai.net/why-adam-optimizer-should-not-be-the-default-learning-algorithm-a2b8d019eaa0\n",
+    "\n",
+    "Der Adam Optimierer wurde entwickelt, um neurale Netzwerke zu trainieren. In der Praxis zeigt sich jedoch, das Adam schlechtere Ergebnisse als das stochatische Gradientenverfahren findet. \n",
+    "[Bushaev, 2018](https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c)"
    ]
   },
   {
