Added new sentences to Einsatzbereich.

--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -219,11 +219,11 @@
       "source": [
         "Im Folgenden wird eine Beispielimplementierung in Python beschrieben. Die Implementierung basiert auf einem Beispiel von [Enoch Kan, 2020](https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc) Das Beispiel verwendet nur die Biblliotheken numpy und math.\n",
         "\n",
-        "Um den Adam Algorithmus zu initialisieren müssen einige Konstanten definiert werden:\n",
+        "Um den Adam Algorithmus zu initialisieren müssen einige Variablen definiert werden:\n",
         "\n",
-        "- alpha = Schrittgröße\n",
-        "- beta1 und beta2 = Gewichtung neuerer Werte gegenüber älteren Werten. beta1 fasst den Mittelwert und beta2 die unzentrierte Varianz zusammen. Bei der unzentrierten Varianz handelt es sich um den reinen Varianzwert ohne Abzug des Mittelwerts.\n",
-        "- epsilon = Konstante, damit beim Updaten von  nicht durch null geteilt wird.\n",
+        "- alpha ($\\alpha$) = Schrittgröße\n",
+        "- beta1 ($\\beta_1$) und beta2 ($\\beta_2$) = Gewichtung neuerer Werte gegenüber älteren Werten. beta1 fasst den Mittelwert und beta2 die unzentrierte Varianz zusammen. Bei der unzentrierten Varianz handelt es sich um den reinen Varianzwert ohne Abzug des Mittelwerts.\n",
+        "- epsilon ($\\epsilon$) = Konstante, damit beim Updaten von  nicht durch null geteilt wird.\n",
         "\n",
         "In jeder Iteration des Algorithmus werden folgende Schritte durchgeführt: Im Ersten Schritt werden die Gewichte und der Bias von $\\beta_1$ und $\\beta_2$ berechnet. Dazu werden $m_t$ (der Mittelwert) und $v_t$ (die Varianz) über die Formeln  \n",
         "$m_t = \\beta_t * m_{t-1} + (1- \\beta_1) * g_t$ und $v_t = \\beta_t * v_{t-1} + (1- \\beta_2) * g^2_t$ berechnet.\n",
