Improved the chapter 'Limitierungen'

--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -1126,7 +1126,12 @@
         "- **Unter Umständen zu geringe Lernrate**  \n",
         "  Es kann sein, dass die Lernrate zu gering ist, damit eine effektive Konvergenz erreicht wird. In der Folge kann es sein, dass nicht der richtige Pfad gefunden wird und somit zu einem suboptimalen Punkt konvergiert.\n",
         "- **Unter Umständen stark steigende Lernrate**  \n",
-        "  Tritt dieser Fall ein, so wirkt sich das stark auf die Leistung des Algorithmus aus."
+        "  Tritt dieser Fall ein, so wirkt sich das stark auf die Leistung des Algorithmus aus.\n",
+        "\n",
+        "Allerdings können die Grenzen von ADAM durch Einsatz der Strategie SWATS überwunden werden. Nitish Shirish Keskar und Richard Socher haben untersucht, wie die Generalisierungsleistung durch den Wechsel von ADAM zu SGD verbessert werden kann. [Problems with Adam, 2018](https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c) Im dazugehörigen Paper wird die SWATS Strategie vorgestellt, was so viel bedeutet wie \"**Sw** from **A**dam **t**o **S**GD\". Das heißt, dass nur zu SGD gewechselt wird, wenn eine Bedingung eintritt. [Improving Generalization Performance by Switchin from Adam to SGD](https://arxiv.org/abs/1712.07628)\n",
+        "Die Bedingung ist folgendermaßen aufgebaut:\n",
+        "$$\\left| \\frac{\\lambda_k}{1-\\beta_2^k}-\\gamma_k \\right| < \\epsilon,$$\n",
+        "Dabei wird der verzerrungskorrigierter exponentieller Mittelwert mit dem aktuellen Wert $\\gamma_k$ verglichen. Die Bias-Korrektur ist notwendig, um während dem Training zu verhindern, dass die Null-Initialisierung einen Einfluss hat. Wenn diese Bedingung erfüllt ist, wird die Lernrate von SGD mit $\\Lambda:=\\frac{\\lambda_k}{(1-\\beta_2^k)}$ gewählt.[2.2 Switchover Point](https://arxiv.org/abs/1712.07628)"
       ]
     },
     {
