--- a/lucas.ipynb
+++ b/lucas.ipynb
@@ -6,17 +6,9 @@
    "metadata": {},
    "source": [
     "# Einsatzbereich\n",
-    "Fürs Training komplexer neuronaler Netze\n",
-    "https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c\n",
-    "\n",
-    "https://pub.towardsai.net/why-adam-optimizer-should-not-be-the-default-learning-algorithm-a2b8d019eaa0\n",
-    "\n",
     "Der Adam Optimierer wurde entwickelt, um neurale Netzwerke zu trainieren [Bushaev, 2018](https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c). Adam kann zum Beispiel dafür verwendet werden, um Pixeländerungen an Bildern durchzuführen, ohne den Hashwert zu verändern. Struppek et al. [Struppek et al., 2022, S. 6f](https://arxiv.org/pdf/2111.06628.pdf) konten zeigen, das mit Adam Hash Kollisionen forciert oder vermieden werden können. Dadurch ist es unter anderem möglich kleine Änderungen an den Pixeln von Bildern vorzunehmen, ohne den Hash-Wert zu ändern. Apple verwendet den Hash-Wert von Bildern um Kinderpornografie in Bildern von Nutzern der iCloud zu identifizieren. Mit Hilfe von Optimierern, wie Adam, können Bilder manipuliert und Personen belastende Bilder untergeschoben werden, deren Hash-Wert mit einem Hash-Wert aus einer Child Sexual Abuse Material (CSAM) **Abkürzung übernehmen** Datenbank übereinstimmt [Struppek et al., 2022, S. 1](https://arxiv.org/pdf/2111.06628.pdf).\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    " Dazu Adam ist einfach zu implementieren, verbraucht wenig Speicher oder Prozessorleistung und kann für große Datensätze vmit vielen Parametern verwendet werden. Die vorgegebenen \"Hypter-Parameter\" benötigen wenig Anpassung um gute Ergebnisse zu liefern [Kingma, Ba, 2015, S. 1](https://arxiv.org/abs/1412.6980) (**Quelle im Leteraturverzeichnis hinterlegen**)."
+    "Jais et al. [Jais et al., 2019, S. 1](http://journal2.um.ac.id/index.php/keds/article/view/6775/0) konnten zeigen, das Adam in tiefen und weiten neuronalen Netzwerken verwendet werden, um deren Leistung zu verbessern. Als Grundlage für das tiefe und weite neuronale Netzwerk wurden Daten zu Brustkrebs verwendet. Diese wurden korelliert, um Muster im Datensatz zu erkennen. Daraufhin wurde mit den Daten das tiefe und weite neuronale Netzwerk trainiert. Der Trainingsprozess wurde mit Adam optimiert [Jais et al., 2019, S. 43f.](http://journal2.um.ac.id/index.php/keds/article/view/6775/0)."
    ]
   }
  ],
